--- a/.github/workflows.yml
+++ b/.github/workflows.yml
@@ -11,14 +11,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
       - name: Build Docker image
-        run: docker build -t reg.example.com/your-image-name:latest -f Dockerfile.prod .
+        run: docker build -t  ${{ secrets.DOCKER_REGISTRY_URL }}/docker-nodejs:latest -f Dockerfile.prod .
 
       - name: Push Docker image
-        run: docker push reg.example.com/your-image-name:latest
+        run: docker push  ${{ secrets.DOCKER_REGISTRY_URL }}/docker-nodejs:latest
