--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -8,11 +8,13 @@ on:
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
       - name: Build Docker image
-        run: docker build -t ${{ secrets.DOCKER_REGISTRY_URL }}/docker-nodejs:latest -f Dockerfile.prod .
+        run: docker build -t  ${{ secrets.DOCKER_REGISTRY_URL }}/docker-nodejs:latest -f Dockerfile.prod .
 
       - name: Push Docker image
         run: docker push  ${{ secrets.DOCKER_REGISTRY_URL }}/docker-nodejs:latest
