--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -14,7 +14,13 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Build Docker image
-        run: docker build -t ${secrets.DOCKER_REGISTRY_URL}/docker-nodejs:latest -f Dockerfile.prod .
+        run: |
+          DOCKER_REGISTRY_URL=${{ secrets.DOCKER_REGISTRY_URL }}
+          DOCKER_REGISTRY_URL=${DOCKER_REGISTRY_URL%/}
+          docker build -t $DOCKER_REGISTRY_URL/docker-nodejs:latest -f Dockerfile.prod .
 
       - name: Push Docker image
-        run: docker push ${secrets.DOCKER_REGISTRY_URL}/docker-nodejs:latest
+        run: |
+          DOCKER_REGISTRY_URL=${{ secrets.DOCKER_REGISTRY_URL }}
+          DOCKER_REGISTRY_URL=${DOCKER_REGISTRY_URL%/}
+          docker push $DOCKER_REGISTRY_URL/docker-nodejs:latest
