--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -3,7 +3,7 @@ name: Build and Push Docker Image
 on:
   push:
     branches:
-      - master
+      - main
 
 jobs:
   build-and-push:
@@ -14,13 +14,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Build Docker image
-        run: |
-          DOCKER_REGISTRY_URL=${{ secrets.DOCKER_REGISTRY_URL }}
-          DOCKER_REGISTRY_URL=${DOCKER_REGISTRY_URL%/}
-          docker build -t $DOCKER_REGISTRY_URL/docker-nodejs:latest -f Dockerfile.prod .
+        run: docker build -t reg.example.com/your-image-name:latest -f Dockerfile.prod .
 
       - name: Push Docker image
-        run: |
-          DOCKER_REGISTRY_URL=${{ secrets.DOCKER_REGISTRY_URL }}
-          DOCKER_REGISTRY_URL=${DOCKER_REGISTRY_URL%/}
-          docker push $DOCKER_REGISTRY_URL/docker-nodejs:latest
+        run: docker push reg.example.com/your-image-name:latest
