--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Build Docker image
-        run: docker build -t reg.example.com/your-image-name:latest -f Dockerfile.prod .
+        run: docker build -t ${{ secrets.DOCKER_REGISTRY_URL }}/your-image-name:latest -f Dockerfile.prod .
 
       - name: Push Docker image
-        run: docker push reg.example.com/your-image-name:latest
+        run: docker push ${{ secrets.DOCKER_REGISTRY_URL }}/your-image-name:latest
