--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -1,4 +1,4 @@
-name: Build and Push Docker Image
+name: build
 
 on:
   push:
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Build Docker image
-        run: docker build -t ${{ secrets.DOCKER_REGISTRY_URL }}/docker-nodejs:latest -f Dockerfile.prod .
+        run: docker build -t ${{ secrets.DOCKER_REGISTRY_URL }}/${{ secrets.DOCKER_IMAGE_NAME }}:latest -f Dockerfile.prod .
 
       - name: Push Docker image
-        run: docker push ${{ secrets.DOCKER_REGISTRY_URL }}/docker-nodejs:latest
+        run: docker push ${{ secrets.DOCKER_REGISTRY_URL }}/${{ secrets.DOCKER_IMAGE_NAME }}:latest
